Updated version to java 25, updated some dependencies, solved warning caused by jline