@@ -11,7 +11,13 @@ import java.nio.file.Path;
 import static comics.utils.Utils.commonChecks;
 
 @Setter
-@Command(command="unpack", description="Unpacks every cbz/cbr file under CWD")
+@Command(
+        command="unpack",
+        description="Unpacks every cbz/cbr file under CWD",
+        // Kind of ham-fisted - prevents warnings of restricted access by jline3 by reverting to the free-for-all native access
+        // Not great options provided in the library https://github.com/jline/jline3/issues/1067
+        jvmArgs = "--enable-native-access=ALL-UNNAMED"
+)
 public class UnpackCommand {
 
     @Parameter(name="npb", longName="no-progress-bar", description="If set, the command will display no progress bar")
